--- a/frontend/eureka/package.json
+++ b/frontend/eureka/package.json
@@ -12,35 +12,35 @@
   },
   "private": true,
   "dependencies": {
-    "@agm/core": "^1.0.0-beta.2",
-    "@angular/animations": "^4.2.4",
-    "@angular/common": "^4.2.4",
-    "@angular/compiler": "^4.2.4",
-    "@angular/core": "^4.2.4",
-    "@angular/forms": "^4.2.4",
-    "@angular/http": "^4.2.4",
-    "@angular/platform-browser": "^4.2.4",
-    "@angular/platform-browser-dynamic": "^4.2.4",
-    "@angular/router": "^4.2.4",
-    "@cloudinary/angular-4.x": "^1.1.0",
-    "body-parser": "^1.18.2",
-    "bootstrap": "^4.0.0-beta.2",
-    "cloudinary-core": "^2.3.0",
-    "core-js": "^2.4.1",
-    "express": "^4.16.2",
-    "font-awesome": "^4.7.0",
-    "jquery": "^3.2.1",
-    "ngx-chips": "^1.5.11",
-    "popper.js": "^1.12.6",
-    "rxjs": "^5.4.2",
-    "tether": "^1.4.0",
-    "tooltip.js": "^1.1.6",
-    "zone.js": "^0.8.14"
+    "@agm/core": "1.0.0-beta.2",
+    "@angular/animations": "4.2.4",
+    "@angular/common": "4.2.4",
+    "@angular/compiler": "4.2.4",
+    "@angular/core": "4.2.4",
+    "@angular/forms": "4.2.4",
+    "@angular/http": "4.2.4",
+    "@angular/platform-browser": "4.2.4",
+    "@angular/platform-browser-dynamic": "4.2.4",
+    "@angular/router": "4.2.4",
+    "@cloudinary/angular-4.x": "1.1.0",
+    "body-parser": "1.18.2",
+    "bootstrap": "4.0.0-beta.2",
+    "cloudinary-core": "2.3.0",
+    "core-js": "2.4.1",
+    "express": "4.16.2",
+    "font-awesome": "4.7.0",
+    "jquery": "3.2.1",
+    "ngx-chips": "1.5.11",
+    "popper.js": "1.12.6",
+    "rxjs": "5.4.2",
+    "tether": "1.4.0",
+    "tooltip.js": "1.1.6",
+    "zone.js": "0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "^1.4.9",
-    "@angular/compiler-cli": "^4.2.4",
-    "@angular/language-service": "^4.2.4",
+    "@angular/cli": "1.4.9",
+    "@angular/compiler-cli": "4.2.4",
+    "@angular/language-service": "4.2.4",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
@@ -50,9 +50,9 @@
     "karma": "~1.7.0",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-coverage-istanbul-reporter": "1.2.1",
     "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-jasmine-html-reporter": "0.2.2",
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
